--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -33,13 +33,13 @@
             <input type="email" id="mail" class="input-padron" required placeholder="email@dominio.com">
 
             <label for="telefono">Teléfono</label>
-            <input type="tel" id="telefono" class="input-padron" required placeholder="(XXX) XXXX-XXXX">
+            <input type="tel" id="telefono" class="input-padron" required placeholder="(XX) XXXX-XXXX">
 
             <label for="mensaje"></label>
             <textarea id="mensaje" cols="70" rows="10" class="input-padron" required></textarea>
 
-            <div>
-                <p>¿Cómo le gustaría que lo contactemos?</p>
+            <fieldset>
+                <legend>¿Cómo le gustaría que lo contactemos?</legend>
 
                 <label for="radio-email">
                     <input type="radio" name="contacto" value="email" id="radio-email">Email</label>
@@ -49,27 +49,58 @@
 
                 <label for="radio-whatsapp">
                     <input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp" checked>WhatsApp</label>
-            </div>
+            </fieldset>
 
-            <div>
-                <p>¿En cuál horario prefiere ser atendido?</p>
+            <fieldset>
+                <legend>¿En cuál horario prefiere ser atendido?</legend>
                 <select>
                     <option>Mañana</option>
                     <option>Tarde</option>
                     <option>Noche</option>
                 </select>
-            </div>
+            </fieldset>
 
-            <label class="checkbox"><input type="checkbox" checked>¿Le gustaría recibir novedades de la Barbería?</label>
+            <label class="checkbox"><input type="checkbox" checked>¿Le gustaría recibir novedades de la
+                Barbería?</label>
 
-            <input type="submit" value="Enviar formulario">
+            <input class="enviar" type="submit" value="Enviar formulario">
         </form>
+
+        <table>
+            <thead>
+                <tr>
+                    <td>Día</td>
+                    <td>Horario</td>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Lunes</td>
+                    <td>08h - 20h</td>
+                </tr>
+
+                <tr>
+                    <td>Miércoles</td>
+                    <td>08h - 20h</td>
+                </tr>
+
+                <tr>
+                    <td>Viernes</td>
+                    <td>8h - 20h</td>
+                </tr>
+            </tbody>
+        </table>
+
     </main>
 
     <footer>
         <img src="../public/img/logo/logo-blanco.png">
         <p class="copyright">©Copyright Barbería Alura - 2020</p>
     </footer>
+
+
+
 </body>
 
 </html>
