Restizando la vista index, agregado mapa y video

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="caja-superior">
-            <h1><img src="../public/img/Logo/logo.png"></h1>
+            <h1><img src="../public/img/logo/logo.png"></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
