--- a/templates/productos.html
+++ b/templates/productos.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="caja-superior">
-            <h1><img src="../public/img/Logo/logo.png"></h1>
+            <h1><img src="../public/img/logo/logo.png"></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
