Implementando mejoras visuales en la vista index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,11 +96,6 @@ footer {
     margin: 20px;
 }
 
-main{
-    width: 940px;
-    margin: 0 auto;    
-}
-
 form{
     margin: 40px 0;
 }
@@ -162,6 +157,13 @@ td, th{
     width: 100%;
 }
 
+.principal{
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto; 
+}
+
 .titulo-principal{
     text-align: center;
     font-size: 2em;
@@ -171,6 +173,7 @@ td, th{
 
 .principal p{
     margin: 0 0 1em;
+
 }
 
 .principal strong{
@@ -179,6 +182,7 @@ td, th{
 
 .principal em{
     font-style: italic;
+
 }
 
 .utensilios{
@@ -189,6 +193,7 @@ td, th{
 
 .mapa{
     padding: 3em 0;
+    background: linear-gradient(#fefefe, #888888);
 }
 
 .mapa p{
@@ -196,7 +201,40 @@ td, th{
     text-align: center;
 }
 
-.imagenDiferenciales{
+.mapa-contenido{
+    width: 940px;
+    margin: 0 auto;
+}
+
+.diferenciales{
+    padding: 3em 0;
+    background: #888888;
+}
+
+.contenido-diferenciales{
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-diferenciales{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.items:first-child{
+    font-weight: bold;
+}
+
+.items{
+    line-height: 1.5;
+}
+
+.items:before{
+    content: "★";
+}
+
+.imagen-diferenciales{
     width: 60%;
 }
 
