--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,6 +169,7 @@ td, th{
     font-size: 2em;
     margin: 0 0 1em;
     clear: left;
+
 }
 
 .principal p{
@@ -236,9 +237,21 @@ td, th{
 
 .imagen-diferenciales{
     width: 60%;
+    transition: 400ms;
+    box-shadow: 3px 3px 10px black;
+}
+
+.imagen-diferenciales:hover{
+    opacity: 30%;
 }
 
 .video{
     width: 560px;
     margin: 1em auto; 
+}
+
+@media screen and (max-width:480px) {
+    .caja, .principal{
+        width: auto;
+    }
 }
